This file documents the revision history for the SNClient agent.

next:
         - optionally send HSTS header in HTTP response
         - update node exporter to 1.10.2
         - chore: update dependencies

0.38     Fri Oct 10 14:41:11 CEST 2025
         - fix plugin output ending in chinese characters (#261)
         - chore: update dependencies
         - improve logging of invalid http requests
         - check_logfile: improve detection of required macros
         - add list-combine option
         - add challenge password support for csr
         - add CheckLogFile option to /modules configuration
         - add "allowed pattern" option for check_logfiles
         - add new macro operator trim and chomp

0.37     Sun Sep  7 11:41:00 CEST 2025
         - update windows exporter to 0.31.3
         - chore: update dependencies
         - change minimum golang requirement to 1.24.6
         - osx:
           - fix corrupted json output (invalid character '\x00' looking for beginning of object key string)

0.36     Tue Jul 29 14:24:04 CEST 2025
         - add new attribute "require password" which must be disabled to allow requests without password
         - disallow empty passwords and empty passwords no longer disable password authentication
         - check_service: add support for comma separated service list
         - check_drivesize: fix case insensitive windows paths
         - msi: disable downgrades in windows installer
         - update: add support to extract .deb files
         - update windows exporter to 0.31.1
         - fix https includes from subsection (#246)
         - fix multiple filter not being combined by logical OR
         - fix extending default filter and thresholds

0.35     Fri Jun 13 16:30:25 CEST 2025
         - change showing performance data in check_files and check_services (#243)
         - kill orphanded managed exporters which might block listen ports
         - remove pipes from unknown macros in final output